trunk/Archive2/2c/3752d7d27321ad/output
main.cpp:12:6: error: no matching function for call to 'processArray'
     processArray(array);
     ^~~~~~~~~~~~
main.cpp:6:6: note: candidate function not viable: no known conversion from 'volatile uint8_t *[16]' to 'const volatile uint8_t **' (aka 'const volatile unsigned char **') for 1st argument
void processArray(const volatile uint8_t**)
     ^
1 error generated.
